[gd_scene load_steps=9 format=3 uid="uid://ds77dbghyaifc"]

[ext_resource type="Texture2D" uid="uid://d1jylf2ps2072" path="res://icon.svg" id="1_dpmtn"]
[ext_resource type="Script" path="res://Scripts/Microgames/Oven/OvenMicrogame.gd" id="1_uo1gh"]
[ext_resource type="Texture2D" uid="uid://b0tmnyluad5ak" path="res://Assets/Microgames/Minigame UI/ovenBarUnder.png" id="3_g8yms"]
[ext_resource type="Texture2D" uid="uid://b4l6scnj0u4a6" path="res://Assets/Controls/mash.png" id="3_qpd2i"]
[ext_resource type="Texture2D" uid="uid://bpfv22do8kf4e" path="res://Assets/Microgames/Minigame UI/ovenBarFrame.png" id="4_45k3y"]
[ext_resource type="Texture2D" uid="uid://chnslkw126ecb" path="res://Assets/Microgames/Minigame UI/ovenBarProgress.png" id="5_052ct"]
[ext_resource type="Script" path="res://Scripts/Microgames/Oven/BakeLevelBar.gd" id="6_whq85"]
[ext_resource type="Script" path="res://Scripts/Microgames/TimerLabel.gd" id="8_peoba"]

[node name="OvenMicrogame" type="Node2D"]
script = ExtResource("1_uo1gh")

[node name="Oven" type="Sprite2D" parent="."]
position = Vector2(728, 512)
scale = Vector2(4.33524, 3.01473)
texture = ExtResource("1_dpmtn")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1366.0
offset_bottom = 771.0
metadata/_edit_lock_ = true

[node name="BakeLevelBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_left = 464.0
offset_top = 152.0
offset_right = 976.0
offset_bottom = 252.0
texture_under = ExtResource("3_g8yms")
texture_over = ExtResource("4_45k3y")
texture_progress = ExtResource("5_052ct")
script = ExtResource("6_whq85")

[node name="LullTimer" type="Timer" parent="UI/BakeLevelBar"]
one_shot = true

[node name="Controls" type="Sprite2D" parent="UI"]
position = Vector2(224, 320)
scale = Vector2(0.66, 0.66)
texture = ExtResource("3_qpd2i")

[node name="EndUI" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndingFade" type="ColorRect" parent="UI/EndUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.537255, 0.537255, 0.537255, 0.592157)

[node name="FinishedLabel" type="Label" parent="UI/EndUI"]
layout_mode = 0
offset_left = 654.0
offset_top = 224.0
offset_right = 743.0
offset_bottom = 250.0
text = "Finished!"

[node name="TimerLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1136.0
offset_top = 232.0
offset_right = 1176.0
offset_bottom = 255.0
script = ExtResource("8_peoba")
num_seconds = 8

[node name="GameTimer" type="Timer" parent="UI/TimerLabel"]
one_shot = true
autostart = true

[connection signal="timeout" from="UI/BakeLevelBar/LullTimer" to="UI/BakeLevelBar" method="_on_lull_timer_timeout"]
[connection signal="timeout" from="UI/TimerLabel/GameTimer" to="." method="_on_game_timer_timeout"]
